--- a/css/style.css
+++ b/css/style.css
@@ -3188,16 +3188,16 @@ ul.infrestructure>li:before{content:'- '}
 
   /* MODAL */
   .modal-wrapper {
-    position:absolute;
-    width:30%;
-    /*width: auto;*/
-    background: #363636;
-    color: white;
-    font-size: 18px;
-    padding:15px;
-    left:32%;
-    display: inline-block;
-    z-index:1;
+position: absolute;
+  width: auto;
+  background: #363636;
+  color: white;
+  font-size: 18px;
+  padding: 15px;
+  right: 32%;
+  left: auto;
+  display: inline-block;
+  z-index: 1;
   }
   .modal-wrapper.hide {
     display: none;
@@ -3205,16 +3205,16 @@ ul.infrestructure>li:before{content:'- '}
   .modal-content ul {
     margin: 0;
     width:auto;
+    display: table;
   }
   .modal-content ul li {
-    list-style: none;
-    min-width: 45%;
+      list-style: none;
     padding-right: 15px;
     display: inline-block;
-    float: left;
     cursor: pointer;
-    margin:0;
-    /*white-space: nowrap;*/
+    margin: 0;
+    display: table-row;
+    width: 50%;
   }
   .modal-content ul li:not(.hide):nth-child(even):after {
     content:"\a";
